--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Play</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 
  
 </head>
@@ -51,6 +51,6 @@
          </div>
          <div id="result"></div>
      </div>
-     <script src="jscript.js"></script>
+     <script src="app.js"></script>
 </body>
 </html>
